[DSTEW-POC] - remove all old projects